Fix layout on smaller screens to not overlap

--- a/index.css
+++ b/index.css
@@ -268,6 +268,16 @@
 
     #particles-js {
         height: 100%;
+        position: static;
+        padding-bottom: 110%;
+    }
+
+    .particles {
+        position: absolute;
+    }
+
+    #projects {
+        position: static;
     }
 
 }
